# state-space-mamba

./: .gitignore  AttentionLSTM.py  DataLoader.py  DataPreparation.py  DataTransformation.py  DataTransformation2.py  Makefile  PCA.py  README.md  Seq2SeqLSTM.py  SimpleLSTM.py  TimeSeriesTransformer.py  correlation_check.py  main.py  main2.py  pyproject.toml  requirements.txt  residuals.csv  trend_forecast.py
class/: AttentionLSTM.py  MambaSSM.py  SegRNN.py  Seq2SeqLSTM.py  SimpleLSTM.py  scans.py
evaluation/: step_5_evaluate.py
model/: AttentionLSTM-loss-85.3017.pt  DataParallel-loss-0.1179.pt  DataParallel-loss-1.9453.pt  LSTM-loss-0.0146.pt  MambaSSM-loss-0.000060.pt  MambaSSM-loss-0.000083.pt  MambaSSM-loss-0.000142.pt  MambaSSM-loss-0.000164.pt  MambaSSM-loss-0.000265.pt  MambaSSM-loss-0.000400.pt  MambaSSM-loss-0.000517.pt  MambaSSM-loss-0.001076.pt  MambaSSM-loss-0.0012.pt  MambaSSM-loss-0.001890.pt  MambaSSM-loss-0.0022.pt  MambaSSM-loss-2.0492.pt  MambaSSM-loss-2.2278.pt  Seq2SeqLSTM-loss-0.0389.pt  Seq2SeqLSTM-loss-0.1178.pt  Seq2SeqLSTM-loss-2.2822.pt  Seq2SeqLSTM-loss-77.5841.pt  SimpleLSTM-loss-0.1146.pt  TimeSeriesTransformer-loss-4.8606.pt
output/: norm_params.json  step1_ods.csv  step2_dwd.csv  step3_dm.csv  step5_rollout.csv  train_meta.json  trend_params.json
pipeline/: step_1_data_ingestion.py  step_2_feature_engineering.py  step_3_dm.py  step_3_model_input.py  step_4_train.py  step_5_evaluate.py
scripts/: correlation_check.py  trend_forecast.py
src/ssm/: __init__.py  (+3 more)
tests/: test_artifacts.py  test_eval_meta.py  test_loader.py  test_model.py  test_splits.py  test_transforms.py
training/: step_4_train.py
(+6 files in other folders)
